# tbc-arena-lab

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/: benchmarks.md  differential_harness.md  divergence_ledger.md  m0_status.md  m5_selfplay.md  mechanics_spec.md  observation_action_spec.md  project_plan_v3.md  python_bindings.md
python/tbc_arena/: __init__.py
python/tests/: test_env.py
python/train/: config.py  envs.py  evaluate.py  net.py  selfplay.py  test_train.py
scenarios/: m0_behind.yaml  m0_front_shield.yaml  m1_mutual.yaml  m2_duel.yaml  m5_duel.yaml
sim/core/: event_queue.h  fixed_trig.h  fnv1a.h  rng.h  rng_subsystem.h  scenario.cpp  scenario.h  trace.cpp  trace.h  unit_state.h
sim/env/: arena_c_api.cpp  arena_c_api.h
sim/mechanics/: abilities.cpp  abilities.h  attack_table.cpp  attack_table.h  damage.h  dist.cpp  dist.h  match.h  observation.h  parry_haste.h  policy.h  rage.h  replay.cpp  replay.h  ruleset.cpp  ruleset.h  swing.h  trace_sink.h
sim/oracle/: cmangos_model.cpp  cmangos_model.h
sim/tests/: test_abilities.cpp  test_attack_table.cpp  test_damage_rage.cpp  test_determinism.cpp  test_dist_self.cpp  test_engine.cpp  test_event_order.cpp  test_main.cpp  test_observation.cpp  test_oracle_model.cpp  test_parry_haste.cpp  test_replay_golden.cpp  test_rng.cpp
sim/tests/golden_traces/: m0_behind.jsonl  m0_front_shield.jsonl  m1_mutual.jsonl  m2_duel.jsonl
tools/: arena_bench.cpp  arena_diff.cpp  arena_dist.cpp  arena_replay.cpp  arena_run.cpp
